# OLD_kmerDecoder

./: .travis.yml  CMakeLists.txt  README.md  a.out  build_wrapper.sh  input_module.cpp  input_module.hpp  kmerDecoder.i  main.cpp  run.py  run.sh  setup.py  skip.cpp  skipmers.cpp  skipmers.hpp  skipmers.ipynb
include/: input_module.hpp
python_preview/: minimzers.ipynb
python_preview/.ipynb_checkpoints/: minimzers-checkpoint.ipynb
src/: InputModuleMinimzers.cpp  input_module.cpp
